--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,10 @@ upstream backend_api {
     server backend:8000;
 }
 
+upstream frontend_static {
+    server frontend:3000;
+}
+
 upstream minio_api {
     server minio:9000;
 }
@@ -83,21 +87,32 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Frontend static files - served directly from nginx
-    root /usr/share/nginx/html;
-    index index.html;
-
-    # Cache static assets
+    # Cache static assets from frontend
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|webp)$ {
+        proxy_pass http://frontend_static;
+        proxy_http_version 1.1;
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
         expires 1y;
         add_header Cache-Control "public, immutable";
         access_log off;
     }
 
-    # Frontend routes - handle React Router (SPA)
+    # Frontend static files - proxy to frontend container
+    # This handles all other routes (React Router SPA)
     # Must be last to catch all remaining routes
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontend_static;
+        proxy_http_version 1.1;
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
