--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb://host.docker.internal:27017
 DATABASE_NAME=diamond_erp
 
 
@@ -12,10 +12,10 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # App
 APP_NAME=Diamond ERP API
 DEBUG=True
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
 
 # Initial Admin (seeded on startup if missing)
 ADMIN_EMAIL=admin@diamonderp.com
 ADMIN_PASSWORD=Admin@123
 ADMIN_NAME=Administrator
+ALLOWED_ORIGINS=https://staging.gac.powerbrainlabs.com,http://staging.gac.powerbrainlabs.com,https://backend-sta.gac.powerbrainlabs.com,http://backend-sta.gac.powerbrainlabs.com,http://136.114.184.66,http://136.114.184.66:80,http://localhost:80,http://localhost:5173,http://localhost:3000
