--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -11,14 +11,24 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    # Memory limits for low RAM server
+    # Nginx gets 100MB (very lightweight)
+    deploy:
+      resources:
+        limits:
+          memory: 100M
+        reservations:
+          memory: 50M
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
-      # Optional: Mount SSL certificates for HTTPS
-      # - ./ssl:/etc/nginx/ssl:ro
+      # Mount SSL certificates for HTTPS
+      - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./logs:/var/log/nginx
     networks:
       - erp-backend-network
-    depends_on:
-      - backend
+    # Note: depends_on removed since backend is in a different compose file
+    # Nginx will connect to backend via the shared network
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
