feat: Initialize backend structure with core modules, API endpoints, schemas, and seed default category schemas.

--- a/.env
+++ b/.env
@@ -15,7 +15,27 @@ DEBUG=True
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
 
+# Super Admin (seeded on startup if missing)
+SUPER_ADMIN_EMAIL=superadmin@diamonderp.com
+SUPER_ADMIN_PASSWORD=SuperAdmin@123
+SUPER_ADMIN_NAME=Super Administrator
+
 # Initial Admin (seeded on startup if missing)
+# python -m uvicorn app.main:app --reload
 ADMIN_EMAIL=admin@diamonderp.com
 ADMIN_PASSWORD=Admin@123
 ADMIN_NAME=Administrator
+# Navigate to the backend root directory FIRST
+cd C:\go\MyProjects\REACT\PBL\diamond-erp\diamond-erp-back-end
+
+# Activate the virtual environment
+.\venv\Scripts\Activate.ps1
+
+# NOW run uvicorn
+uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+
+# MinIO Configuration
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_USE_TLS=False
