feat: Add an image background removal endpoint utilizing an external API, including configuration for its URL and API key.

--- a/.env
+++ b/.env
@@ -39,3 +39,7 @@ MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_USE_TLS=False
+
+# Background Removal API
+REMBG_API_URL=https://rembg.webeazzy.com/api/process-image
+REMBG_API_KEY=sk-goonzRqHLcRNx5npO5N5iLVULOei87JTPW8qbrpTe4o
