feat: Implement initial backend API structure for certificate types, certifications, clients, jobs, and manufacturers, and comment out `.env` run commands.

--- a/.env
+++ b/.env
@@ -26,13 +26,13 @@ ADMIN_EMAIL=admin@diamonderp.com
 ADMIN_PASSWORD=Admin@123
 ADMIN_NAME=Administrator
 # Navigate to the backend root directory FIRST
-cd C:\go\MyProjects\REACT\PBL\diamond-erp\diamond-erp-back-end
+#cd C:\go\MyProjects\REACT\PBL\diamond-erp\diamond-erp-back-end
 
 # Activate the virtual environment
-.\venv\Scripts\Activate.ps1
+#.\venv\Scripts\Activate.ps1
 
 # NOW run uvicorn
-uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+#uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
 
 # MinIO Configuration
 MINIO_ENDPOINT=localhost:9000
