--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug Connectivity
+        run: |
+          echo "Testing connection to ${{ secrets.GAC_DEPLOY_HOST }} on port ${{ secrets.GAC_DEPLOY_PORT || 22 }}..."
+          # Use timeout to avoid hanging if the port is completely blocked
+          timeout 10s bash -c "cat < /dev/tcp/${{ secrets.GAC_DEPLOY_HOST }}/${{ secrets.GAC_DEPLOY_PORT || 22 }}" && echo "Port is open" || echo "Connection failed or timed out"
+
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.0
         with:
