fix: Update MinIO and MongoDB endpoints to use Docker container names

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb://diamond-erp-mongodb:27017
 DATABASE_NAME=diamond_erp
 
 
@@ -35,7 +35,7 @@ ADMIN_NAME=Administrator
 #uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
 
 # MinIO Configuration
-MINIO_ENDPOINT=localhost:9000
+MINIO_ENDPOINT=diamond-erp-minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_USE_TLS=False
