--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # App
 APP_NAME=Diamond ERP API
 DEBUG=True
-ALLOWED_ORIGINS=*
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,https://staging.gac.powerbrainlabs.com,https://backend-sta.gac.powerbrainlabs.com
 
 
 # Super Admin (seeded on startup if missing)
