feat: Update background removal API to begon.webeazzy.com with improved error handling

--- a/.env
+++ b/.env
@@ -41,5 +41,5 @@ MINIO_SECRET_KEY=minioadmin
 MINIO_USE_TLS=False
 
 # Background Removal API
-REMBG_API_URL=https://rembg.webeazzy.com/api/process-image
-REMBG_API_KEY=sk-goonzRqHLcRNx5npO5N5iLVULOei87JTPW8qbrpTe4o
+REMBG_API_URL=https://begon.webeazzy.com/api/process-image
+REMBG_API_KEY=sk-jBqRqnHAD5JECKpUP8NklxUTmns6d1M57ZoXgI0DW3M
